[workspace]

members = [ 
    "root",
    "header",
    "macros",
    "passby",
    "string",
    "tests/simplib",
    "xtask",
]

[workspace.dependencies]
itertools = "0.10"
libc = "0.2.129"
linkme = "0.3.3"
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = { version = "1.0.99", features=["full", "extra-traits"] }
uuid = { version = "^1.1.2", features = ["v4"] }
