[package]
name = "ffizz-header"
description = "FFI helpers to generate a C header for your library"
repository = "https://github.com/djmitche/ffizz"
readme = "src/crate-doc.md"
documentation = "https://docs.rs/ffizz-header"
license = "MIT"
version = "0.5.0"
edition = "2021"

[dependencies]
# all non-ffizz dependencies should be specified in the workspace
itertools = { workspace = true }
linkme = { workspace = true }

ffizz-macros = { version = "0.5.0", path = "../macros" }
