[package]
name = "ffizz-macros"
description = "FFI helper macros (typically not depended on directly)"
repository = "https://github.com/djmitche/ffizz"
documentation = "https://docs.rs/ffizz-macros"
license = "MIT"
version = "0.4.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
# all non-ffizz dependencies should be specified in the workspace
itertools = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
