[package]
name = "ffizz-passby"
description = "FFI helpers for implementing pass-by-value and pass-by-pointer"
repository = "https://github.com/djmitche/ffizz"
readme = "src/crate-doc.md"
documentation = "https://docs.rs/ffizz-passby"
license = "MIT"
version = "0.3.1"
edition = "2021"

[dependencies]

[dev-dependencies]
uuid = { version = "^1.1.2", features = ["v4"] }
libc = "0.2.129"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]
