[package]
name = "ffizz-passby"
description = "FFI helpers for implementing pass-by-value and pass-by-pointer"
repository = "https://github.com/djmitche/ffizz"
readme = "src/crate-doc.md"
documentation = "https://docs.rs/ffizz-passby"
license = "MIT"
version = "0.4.1"
edition = "2021"

[dependencies]

[dev-dependencies]
# all non-ffizz dependencies should be specified in the workspace
uuid = { workspace = true }
libc = { workspace = true }

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[[example]]
name = "bytebuf"
doc-scrape-examples = true

[[example]]
name = "status"
doc-scrape-examples = true

[[example]]
name = "uuid"
doc-scrape-examples = true
