[package]
name = "ffizz-string"
description = "FFI string implementation"
repository = "https://github.com/djmitche/ffizz"
readme = "src/crate-doc.md"
documentation = "https://docs.rs/ffizz-string"
license = "MIT"
version = "0.3.4"
edition = "2021"

[dependencies]
# all non-ffizz dependencies should be specified in the workspace
libc = { workspace = true }

ffizz-passby = { version = "0.3.4", path = "../passby" }
ffizz-header = { version = "0.3.4", path = "../header" }

[dev-dependencies]
uuid = { workspace = true }

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

